# Anarchastra-161

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
agents/: coder.py  config.py  core.py  research.py  reviewer.py  vision.py
tests/: test_agent_tool_wiring.py  test_audit_ops.py  test_coder_agent_modes.py  test_core_num_ctx.py  test_core_retry.py  test_exec_ops.py  test_file_ops.py  test_git_ops.py  test_git_ops_staged.py  test_grep_ops.py  test_keyword_router.py  test_memory_ops.py  test_model_manager.py  test_network_guard.py  test_parse_session.py  test_perf_ops.py  test_rag_ops.py  test_research_wiring.py  test_reviewer_grep_wiring.py  test_rollback_ops.py  test_run_python_timeout.py  test_scaffold_ops.py  test_socratic_mode.py  test_static_analysis.py  test_system_ops.py  test_vision.py  test_web_ops.py
tools/: audit_ops.py  exec_ops.py  file_ops.py  git_ops.py  grep_ops.py  memory_ops.py  network_guard.py  perf_ops.py  rag_ops.py  rollback_ops.py  scaffold_ops.py  static_analysis.py  system_ops.py  web_ops.py
training/: Modelfile.router  README.md  dataset.jsonl  eval_router.py  train_router_lora.py
training/data/: cursor_dataset.jsonl
training/results/v1_3class_30ex/: eval_checkpoint-20_20260701_163710.txt
training/results/v2_2class_300ex/: eval_router-lora_20260701_182345.txt  eval_router-lora_20260701_183512.txt  eval_router-lora_20260701_184415.txt  eval_router-lora_20260701_191544.txt
